--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ dependencies {
     testImplementation(
             'org.junit.jupiter:junit-jupiter',
             'com.codeborne:selenide:7.9.1',
-            'org.slf4j:slf4j-simple:2.0.7'
+            'org.slf4j:slf4j-simple:2.0.7',
+            'com.github.javafaker:javafaker:1.0.2'
     )
 }
 
