--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation(
-            'org.junit.jupiter:junit-jupiter',
+            'org.junit.jupiter:junit-jupiter:5.10.1',
             'com.codeborne:selenide:7.9.1',
             'org.slf4j:slf4j-simple:2.0.7',
             'com.github.javafaker:javafaker:1.0.2'
