--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,12 @@ dependencies {
             'org.junit.jupiter:junit-jupiter:5.10.1',
             'com.codeborne:selenide:7.9.1',
             'org.slf4j:slf4j-simple:2.0.7',
-            'com.github.javafaker:javafaker:1.0.2'
+            'com.github.javafaker:javafaker:1.0.2',
+            'com.codeborne:pdf-test:1.5.0',
+            'com.codeborne:xls-test:1.4.3',
+            'org.assertj:assertj-core:3.27.3',
+            'com.opencsv:opencsv:5.9',
+            'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     )
 }
 
