--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,24 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.12.0'
 }
 
 group = 'ru.infosec'
 version = '1.0-SNAPSHOT'
+
+allure {
+    report {
+        version.set("2.21.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.21.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
+}
 
 repositories {
     mavenCentral()
@@ -19,7 +34,8 @@ dependencies {
             'com.codeborne:xls-test:1.4.3',
             'org.assertj:assertj-core:3.27.3',
             'com.opencsv:opencsv:5.9',
-            'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+            'com.fasterxml.jackson.core:jackson-databind:2.15.2',
+            'io.qameta.allure:allure-selenide:2.29.1'
     )
 }
 
