Added tasks for Jenkins

--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,17 @@ plugins {
 group = 'ru.infosec'
 version = '1.0-SNAPSHOT'
 
+def allureVersion = "2.21.0"
+
 allure {
     report {
-        version.set("2.21.0")
+        version.set(allureVersion)
     }
     adapter { // отвечает за появление папочки build/allure-results
         aspectjWeaver.set(true) //обработка аннотации @Step
         frameworks {
             junit5 { //название фреймворка
-                adapterVersion.set("2.21.0") //версия интеграции фреймворка и Allure
+                adapterVersion.set(allureVersion) //версия интеграции фреймворка и Allure
             }
         }
     }
@@ -39,6 +41,19 @@ dependencies {
     )
 }
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task demoqa_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("demoqa_lesson11")
+    }
 }
