Added task for lesson 12 test

--- a/build.gradle
+++ b/build.gradle
@@ -52,8 +52,14 @@ tasks.withType(Test) {
     }
 }
 
-task demoqa_test(type: Test) {
+task demoqa_lesson11_test(type: Test) {
     useJUnitPlatform {
         includeTags("demoqa_lesson11")
+    }
+}
+
+task demoqa_lesson12_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("demoqa_lesson12")
     }
 }
